--- a/03-shadow-dom/01-shadow-dom.html
+++ b/03-shadow-dom/01-shadow-dom.html
@@ -43,6 +43,7 @@
                             border-radius: 10px;
                             font-size: 1.5rem;
                             width:300px;
+                            color: green;
                         }
                     </style>
                     <div>This is the SHADOW DOM</div>
@@ -71,11 +72,12 @@
                 <img src="../_images/shadow-dom-fragement.png" alt="fragment of dom">
             </div>
             <div class="spacer"></div>
+            <div id='light'>Light dom div not affected by Shadow DOM CSS</div>
             <div id="output">
                 <!-- OUTPUT OF CUSTOM ELEMENT -->
                 <my-component>SLOT TEXT HERE</my-component> 
             </div>
-            <div>Light dom div not affected by Shadow DOM CSS</div>
+            
             <div class="spacer"></div>
             <div class="exercise"">
                <h3>EXERCISE:</h3>
