changes to CSS section

--- a/04-css/01-css-light.html
+++ b/04-css/01-css-light.html
@@ -14,7 +14,7 @@
     <style>
         /* Custom CSS Variables */
         :root {
-            /* --primary-color: red; */
+            --primary-color: green;
             --primary-size: 32px;
             --font-style: 'capitalize'
         }
