--- a/04-css/02-css--custom-properties-shadow.html
+++ b/04-css/02-css--custom-properties-shadow.html
@@ -16,7 +16,7 @@
     <style>
         /* Custom CSS Variables */
         :root {
-            --primary-color: red;
+            --primary-color: green;
             --primary-size: 25px;
         }
            
@@ -48,6 +48,9 @@
                             width: 600px;
                             margin-bottom:20px;
                             font-family: inherit;
+                        }
+                        slot {
+                            color: purple
                         }
                     </style>
                     <div>A styled DIV element</div>
