--- a/04-css/05-css-host-context.html
+++ b/04-css/05-css-host-context.html
@@ -20,18 +20,12 @@
 			const template = document.createElement('template');
 			template.innerHTML = `
           <style>       
-            :host(#showHost) {
-                font-weight: bold;
-                color: red;
-                font-size: var(--primary-size, 18px);
-            } 
-            /* COMMENTED OUT
             :host-context(#showContext) div {
                 /* if host is in a context of #showContext then style the div element */
-                color: red;
+                color: green;
                 font-weight: bold;
                 font-size: 2.0rem;
-            }*/
+            }
           </style> 
           <div class="demo">DIV element</div>
           <slot></slot>    
@@ -63,9 +57,7 @@
 						<!-- based on the above div#showContext, the component will be styled accordingly -->
 						<my-card>:host-context(#showContext)</my-card>
 					</div>
-					<div>
-						<my-card id="showHost">#showHost</my-card>
-					</div>
+					
 				</div>
 				<div class="spacer"></div>
 				<div class="exercise">
