--- a/04-css/02-css--custom-properties-shadow.html
+++ b/04-css/02-css--custom-properties-shadow.html
@@ -16,7 +16,7 @@
     <style>
         /* Custom CSS Variables */
         :root {
-            --primary-color: green;
+            --primary-color: red;
             --primary-size: 25px;
         }
            
@@ -42,7 +42,7 @@
                             border-radius: 10px;
                             border: 5px solid orange;
                             padding: 20px;
-                            color: var(--primary-color, goldenrod);
+                            color: var(--primary-color, green);
                             text-transform: uppercase;
                             font-size: var(--primary-size);
                             width: 600px;
