--- a/04-css/04-css-host.html
+++ b/04-css/04-css-host.html
@@ -9,12 +9,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>04 Style Hosted</title>
   </head>
+
   <body>
     <style>
       :root {
         /* --primary-color:orange; */
         /* --primary-background: #ccc; */
         /* --primary-size: 30px; */
+      }
+      div {
+        color: green;
       }
     </style>
     <script>
@@ -34,14 +38,14 @@
             :host(#showHost) {
               color: red;
             }
-            :host(.important) {
-              color: red;
+            :host(.important) div{
+              color: orange;
               font-weight: bold;
             }
             :host(.cool) {
-              color: aqua;
+              color: green;
               font-weight: bold;
-              font-size: 28px;
+              font-size: 44px;
             }
         </style>
         <div class="card">
@@ -54,7 +58,9 @@
       class BusinessCard extends HTMLElement {
         constructor() {
           super();
-          this.attachShadow({ mode: 'open' });
+          this.attachShadow({
+            mode: 'open'
+          });
           this.shadowRoot.appendChild(template.content.cloneNode(true));
         }
       }
@@ -99,19 +105,6 @@
               Notice how even if we have cool='yes' if we have just cool
               the:host[cool] takes precedence as it is lower in the style rules.
               Thus it sees
-            </p>
-            <p>
-              :host { color:green; display: block; /*important*/ border: 4px
-              solid #2196f3; background: orange; width:100%; } :host(.important)
-              { color:red; display: block; /*important*/ padding:50px; border:
-              2px dotted red; background: yellow; } :host(.important) #showHost{
-              color: orange; font-size:3rem; } :host(#showHost) { color:red;
-              display: block; /*important*/ padding:50px; border: 2px dashed
-              purple; background: yellow; } :host([cool='yes']) { color:black;
-              display: block; /*important*/ padding:50px; border: 8px dashed
-              brown; background:red ; } :host([cool]) { color:green; display:
-              block; /*important*/ padding: 50px; border: 8px dashed green;;
-              background: #ccc ; }
             </p>
           </h3>
         </div>
