rename files and change demo order

--- a/05-events/02-show-attribute-changed-profile-card.html
+++ b/05-events/02-show-attribute-changed-profile-card.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../_css/w3.css" />
+    <link rel="stylesheet" href="../_css/web-course.css" />
     <title>Profile card</title>
   </head>
 
@@ -11,7 +13,7 @@
     <profile-card
       author="Craig"
       content="content goes here"
-      postid="21"
+      postid="44"
       posttitle="Web Components"
     >
     </profile-card>
