--- a/06-library/01-ndc-show-post/index.html
+++ b/06-library/01-ndc-show-post/index.html
@@ -52,9 +52,7 @@
               document.querySelector('show-post').setAttribute('postid', 109);
               document
                 .querySelector('show-post')
-                .publicMethod(
-                  '!!!! We can access the component via its methods'
-                );
+                .publicMethod('!!!! VALUE PASSED IN HERE');
             });
           </script>
 
